@@ -1,17 +1,15 @@
 package br.com.jacto.trevo.config.exception;
 
 import br.com.jacto.trevo.config.exception.dto.Error400Dto;
-import br.com.jacto.trevo.config.exception.dto.Error403;
 import br.com.jacto.trevo.config.exception.dto.Error409;
 import org.springframework.dao.DataIntegrityViolationException;
-import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.MethodArgumentNotValidException;
 import org.springframework.web.bind.annotation.ExceptionHandler;
 import org.springframework.web.bind.annotation.RestControllerAdvice;
 
 import javax.persistence.EntityNotFoundException;
-import java.nio.file.AccessDeniedException;
+import java.util.stream.Collectors;
 
 @RestControllerAdvice
 public class ErrorHandler {
@@ -25,7 +23,7 @@ public class ErrorHandler {
     public ResponseEntity errorHandler400(MethodArgumentNotValidException exception) {
         var erros = exception.getFieldErrors();
 
-        return ResponseEntity.badRequest().body(erros.stream().map(Error400Dto::new).toList());
+        return ResponseEntity.badRequest().body(erros.stream().map(Error400Dto::new).collect(Collectors.toList()));
     }
 
     @ExceptionHandler(DataIntegrityViolationException.class)
