@@ -4,13 +4,14 @@ import br.com.jacto.trevo.model.account.Account;
 import br.com.jacto.trevo.model.order.OrderItem;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 public class AccountOrderDto {
 
     public AccountOrderDto(Account account){
         this.email = account.getEmail();
         this.name = account.getAccountName();
-        this.orders = account.getOrders().stream().map(AccountListOrderDto::new).toList();
+        this.orders = account.getOrders().stream().map(AccountListOrderDto::new).collect(Collectors.toList());
     }
     private final String email;
 
